# web-bio-tools

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.MIT  README.md  build.sh  deltavis.html  deltavis.js  faq.html  fna2faa.html  hmm.html  index.html  pyproject.toml  sidebar.html
.github/workflows/: test.yml
demo-data/: 0457_vs_0607.delta
src/: alignment.rs  fna2faa.rs  hmm.rs  lib.rs  python.rs  translation.rs
static/: hmm-example.hmm  style.css
tests/: test_against_biopython.py  test_py_biopython.py  test_py_fna2faa.py
