[package]
name = "web_bio_tools"
version = "0.1.0"
edition = "2021"
description = "Basic bioinformatics tools for the web (WASM-based)"
repository = "https://github.com/luispedro/web-bio-tools"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
pyo3 = { version = "0.20", optional = true, features = ["extension-module"] }

[features]
default = []
python = ["pyo3"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[lib]
crate-type = ["cdylib", "rlib"]

