[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "web_bio_tools"
version = "0.1.0"
description = "Python bindings for web-bio-tools"
authors = [{name = "Luis Pedro Coelho"}]
requires-python = ">=3.8"
dependencies = [
    "biopython",
    "pytest",
    "hypothesis",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
web_bio_tools = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.maturin]
bindings = "pyo3"
features = ["python"]
